--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+       <head>
+        <title>semki</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <div>
          <img src="https://s00.yaplakal.com/pics/pics_original/2/4/4/1229442.jpg"><h1>слышь братан семки есть????????? зырь внизу</h1>
